# opensst

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.md  config.ron
.cargo/: config.toml
.github/workflows/: ci.yml
crates/audio/: Cargo.toml
crates/audio/src/: lib.rs
crates/engine_core/: Cargo.toml
crates/engine_core/src/: components.rs  lib.rs  time.rs  transform.rs
crates/game/: Cargo.toml
crates/game/src/: artillery.rs  authored_bug_meshes.rs  authored_env_meshes.rs  biome_atmosphere.rs  biome_features.rs  bug.rs  bug_entity.rs  citizen.rs  config.rs  destruction.rs  dialogue.rs  earth_territory.rs  effects.rs  events.rs  extraction.rs  fleet.rs  fps.rs  horde_ai.rs  hud.rs  main.rs  player.rs  skinny.rs  smoke.rs  spawner.rs  squad.rs  state.rs  tac_fighter.rs  update.rs  viewmodel.rs  weapons.rs
crates/game/src/render/: mod.rs  overlay.rs  planet.rs  ship.rs
crates/input/: Cargo.toml
crates/input/src/: lib.rs
crates/physics/: Cargo.toml
crates/physics/src/: collision.rs  lib.rs  physics_world.rs  ragdoll.rs  raycast.rs
crates/procgen/: Cargo.toml
crates/procgen/src/: biome.rs  bug_mesh.rs  flow_field.rs  lib.rs  planet.rs  star_system.rs  terrain.rs  textures.rs  universe.rs  voxel.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: camera.rs  lib.rs  mesh.rs  pipeline.rs  renderer.rs  texture.rs  vertex.rs
crates/renderer/src/shaders/: blur.wgsl  bright.wgsl  celestial.wgsl  cinematic.wgsl  main.wgsl  overlay.wgsl  shadow.wgsl  sky.wgsl  terrain.wgsl  water.wgsl
docs/: ART_DIRECTION.md  DESIGN_SC_HD2_ST.md  DESIGN_ZERO_G_SPACEWALK.md  IMPROVEMENTS.md  MODULARIZATION.md  PORT_TO_GODOT.md
